--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "typescript": "~5.4.0",
     "vite": "^5.2.8",
     "vite-plugin-commonjs": "^0.10.1",
+    "vite-plugin-html": "^3.2.2",
     "vite-plugin-vue-devtools": "^7.0.25",
     "vue-tsc": "^2.0.11"
   }
